--- a/src/App.css
+++ b/src/App.css
@@ -5,6 +5,7 @@ body {
 .container {
   max-width: 1200px;
   margin: auto;
+  height: ;
 }
 h1,
 h2,
@@ -30,11 +31,28 @@ header {
 }
 .page-title {
   border-bottom: 2px solid #f5edda;
-  padding-bottom: 10px;
+  padding-bottom: 15px;
   display: flex;
   justify-content: center;
   font-size: 30px;
   margin: auto;
-  width: 30%;
+  width: 250px;
   margin-top: 50px;
+  align-items: center;
+}
+.enter-button {
+  display: flex;
+  justify-content: center;
+}
+.my-projects {
+  background-color: #f5edda;
+  color: #1b1212;
+  padding: 10px;
+  margin-top: 20px;
+}
+.my-projects h1 {
+  color: #1b1212;
+  display: flex;
+  justify-content: center;
+  font-size: 26px;
 }
