--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,4 @@
 body {
-  background-color: #1b1212;
   font-family: "Mulish", sans-serif;
 }
 .container {
@@ -7,11 +6,7 @@ body {
   margin: auto;
   height: ;
 }
-h1,
-h2,
-h3 {
-  color: #f5edda;
-}
+
 a {
   text-decoration: none;
   cursor: pointer;
@@ -66,4 +61,13 @@ header {
   margin-top: 20px;
   width: 50%;
   margin: auto;
+}
+.card-container {
+  width: 500px;
+}
+.card-container img {
+  width: 100%;
+}
+.card-container:hover {
+  border: 5px solid red;
 }
