--- a/src/App.css
+++ b/src/App.css
@@ -4,7 +4,6 @@ body {
 .container {
   max-width: 1200px;
   margin: auto;
-  height: ;
 }
 
 a {
@@ -67,7 +66,18 @@ header {
 }
 .card-container img {
   width: 100%;
+  border-radius: 20px;
+  cursor: pointer;
 }
-.card-container:hover {
-  border: 5px solid red;
+.card-container img:hover {
+  border: 2px black solid;
+}
+.projects {
+  display: flex;
+  gap: 20px;
+  flex-wrap: wrap;
+  margin: auto;
+  align-items: center;
+  justify-content: center;
+  margin-top: 30px;
 }
