--- a/src/App.css
+++ b/src/App.css
@@ -81,3 +81,14 @@ header {
   justify-content: center;
   margin-top: 30px;
 }
+.about-me {
+  display: flex;
+  margin: auto;
+  justify-content: center;
+  margin-top: 30px;
+  flex-direction: column;
+  align-items: center;
+}
+.about-me h2 {
+  font-size: 30px;
+}
